# TernaryLogic

./: .gitignore  0testst.md  Atomic Auditability in Financial Execution Pipelines via Hardware-Enforced Ternary States.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Goukassian Principle as Evidentiary Infrastructure.md  Governance(2).md  Governance.md  Immutable_Ledger.md  LICENSE  Lev_TL_Quotes_v1.md  MANIFESTO.md  Makefile  Manifesto.md  README-old.md  README.md  ReadMe(1).md  ReadMe-Maybe.md  ReadMe-New.md  ReadMe-Old.md  ReadMe.html  ReadMe.md  ReadMe_old.md  SECURITY.md  Set of 33 dilemmas of conflicts and complexities.docx  Succession_Declaration.md  TL Structural Tree as 04-24-2026.md  TL Structural Tree as 05-05-2026.md  TL Structural Tree-4-22-2026.md  TL_CONSTITUTIONAL_ARCHITECTURE_OF_ASSURED_GOVERNANCE_v2.0.md  TL_Constitutional_Architecture_Assured_Governance_v.2.0.md  TL_Constitutional_Architecture_Assured_Governance_v1.0.docx  TL_Constitutional_Architecture_Assured_Governance_v1.0.md  TL_Constitutional_Architecture_of_Assured_Governance_v.2.0.md  TL_Master_Context.md  TL_Notarized_Manifest.txt  TL_Quotes-Book.md  TL_Quotes-Book_v3-S.docx  (+25 more)
1_Temp/: New.md  THE CONSTITUTIONAL ARCHITECTURE OF ASSURED GOVERNANCE.md  TL_Constitutional_Architecture_Assured_Governance_v1.0.md  TL_Section_10_Adversarial_Survivability.md  TL_Section_11_PostQuantum_Migration.md  TL_Section_12_Implementation_Economics.md  TL_Section_13_Succession_Continuity.md  TL_Section_14_Conclusion.md  TL_Section_2_Constitutional_Foundations.md  TL_Section_4_Eight_Pillars.md  (+7 more)
(+589 files in other folders)
