[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ternary-logic"
version = "1.0.0"
description = "Economic decision-making framework using ternary logic: Proceed (+1), Hold (0), Halt (-1)"
readme = "README.md"
authors = [
    {name = "Lev Goukassian", email = "leogouk@gmail.com"}
]
license = {text = "MIT"}
keywords = ["ternary logic", "economic modeling", "decision systems", "epistemic hold"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/FractonicMind/TernaryLogic"
"Bug Tracker" = "https://github.com/FractonicMind/TernaryLogic/issues"
"Documentation" = "https://github.com/FractonicMind/TernaryLogic/tree/main/docs"
